[package]
name = "test_crate_io_111"
version = "0.0.1"
edition = "2021"
# cp
authors = ["Samuel Cavalcanti", "scavalcanti111@gmail.com"]
license-file = "LICENSE.md"
keywords = ["robotics", "CoppeliaSim", "zmq"]
categories = ["api-bindings", "science::robotics"]
description = "A ZMQ Client for CoppeliaSim"
readme = "README.md"
repository = "https://github.com/samuel-cavalcanti/test_crates.io"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
