[package]
name = "test_crate_io_111"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE.md"
description = "Testing Crete.io"
keywords = []
categories = []
authors = ["Samuel Cavalcanti", "scavalcanti111@gmail.com"]
readme = "Readme2.md"
repository = "https://github.com/samuel-cavalcanti/test_crates.io"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
